# magicstates

Python/: analyze_error_rates.py  error_rate_scaling.py  get_best_factories.py  magicstates.ipynb  one_level_factory_search.py  plot_error_rate_scaling.py  plot_factory_data.py  plot_small_footprint_factory_data.py  pyproject.toml  requirements.txt  smallfootprint.py  two_level_factory_search.py  two_level_small_footprint_factory_search.py
Python/Simulation_Data/: small_footprint_one_level_15to1_simulations-2024-04-01-10-42.csv  small_footprint_two_level_15to1_simulations-2024-03-29-21-11.csv  two_level_15to1_simulations-2024-04-03-11-00.csv  two_level_15to1_simulations-2024-04-04-15-44.csv
Python/simulation_data/: small_footprint_two_level_15to1_simulations-2024-03-24-00-03.csv  small_footprint_two_level_15to1_simulations-2024-03-24-10-25.csv  small_footprint_two_level_15to1_simulations-2024-03-30-07-42.csv
Python/src/litinski_factories/: magic_state_factory.py  magicstates.ipynb
Python/src/litinski_factories.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Python/src/litinski_factories/best_factories/: small_footprint.py
Python/src/litinski_factories/factory_plotting/: plot_factory_data_simple.py
Python/src/litinski_factories/factory_searching/: one_level_small_footprint_factory_search.py  two_level_factory_search.py  two_level_small_footprint_factory_search.py
Python/src/litinski_factories/factory_simulation/: smallfootprint.py  twolevel15to1.py  twolevel20to4.py
(+3 files in other folders)
